--- a/section-11-Microservices-Architecture/workloads.yaml
+++ b/section-11-Microservices-Architecture/workloads.yaml
@@ -18,7 +18,7 @@ spec:
         app: queue
     spec:
       containers:
-        - name: webapp
+        - name: queue
           image: richardchesterwood/k8s-fleetman-queue:release1
 
 ---
@@ -41,8 +41,34 @@ spec:
         app: position-simulator
     spec:
       containers:
-        - name: webapp
+        - name: position-simulator
           image: richardchesterwood/k8s-fleetman-position-simulator:release1
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: production-microservice
+
+---
+# Deployment Position Tracker
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: position-tracker
+
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: position-tracker
+
+  template:
+    metadata:
+      labels:
+        app: position-tracker
+    spec:
+      containers:
+        - name: position-tracker
+          image: richardchesterwood/k8s-fleetman-position-tracker:release1
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
