--- a/section-11-Microservices-Architecture/services.yaml
+++ b/section-11-Microservices-Architecture/services.yaml
@@ -39,3 +39,24 @@ spec:
     - name: endpoint
       port: 61616
       targetPort: 61616
+
+---
+# Service POSITION TRACKER
+apiVersion: v1
+
+kind: Service
+
+metadata:
+  name: fleetman-position-tracker
+
+spec:
+  type: ClusterIP
+
+  selector:
+    app: position-tracker
+  
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+      # nodePort: 30020
