--- a/section-11-Microservices-Architecture/services.yaml
+++ b/section-11-Microservices-Architecture/services.yaml
@@ -60,3 +60,25 @@ spec:
       port: 8080
       targetPort: 8080
       # nodePort: 30020
+
+
+---
+# Service API GATEWAY
+apiVersion: v1
+
+kind: Service
+
+metadata:
+  name: fleetman-api-gateway
+
+spec:
+  type: ClusterIP
+
+  selector:
+    app: api-gateway
+  
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+      # nodePort: 30020
