--- a/section-11-Microservices-Architecture/workloads.yaml
+++ b/section-11-Microservices-Architecture/workloads.yaml
@@ -73,3 +73,29 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
 
+---
+# Deployment API GATEWAY
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: api-gateway
+
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: api-gateway
+
+  template:
+    metadata:
+      labels:
+        app: api-gateway
+    spec:
+      containers:
+        - name: api-gateway
+          image: richardchesterwood/k8s-fleetman-api-gateway:release1
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: production-microservice
+
