--- a/section-11-Microservices-Architecture/workloads.yaml
+++ b/section-11-Microservices-Architecture/workloads.yaml
@@ -99,3 +99,29 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
 
+---
+# Deployment WEB APP
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: webapp
+
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: webapp
+
+  template:
+    metadata:
+      labels:
+        app: webapp
+    spec:
+      containers:
+        - name: webapp
+          image: richardchesterwood/k8s-fleetman-webapp-angular:release1
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: production-microservice
+
