ADD volumeMoount and mountPath in mongodb-stack under containers

--- a/section-12-kubernetes-persistence-and-volumes/mongo-stack.yaml
+++ b/section-12-kubernetes-persistence-and-volumes/mongo-stack.yaml
@@ -20,6 +20,9 @@ spec:
       containers:
         - name: mongodb
           image: mongo:3.6.5-jessie
+          volumeMounts:
+            - name: mongo-persistent-storage
+              mountPath: /data/db
 
 ---
 # Services
