add storageClassName field in both PVC and PV so that they can bind together

--- a/section-12-kubernetes-persistence-and-volumes/storage.yaml
+++ b/section-12-kubernetes-persistence-and-volumes/storage.yaml
@@ -5,6 +5,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
 spec:
+  storageClassName: mylocalstorage # This links pvc to a pv
   accessModes:
     - ReadWriteOnce
   resources:
@@ -20,6 +21,7 @@ kind: PersistentVolume
 metadata:
   name: local-storage
 spec:
+  storageClassName: mylocalstorage
   capcity:
     storage: 20Gi
   accessModes:
