--- a/section-16-operating your-cluster/storage.yaml
+++ b/section-16-operating your-cluster/storage.yaml
@@ -5,28 +5,23 @@ kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
 spec:
-  storageClassName: mylocalstorage # This links pvc to a pv
+  storageClassName: cloud-ssd # This links pvc to a pv/StorageClass
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 7Gi
 
 ---
 # PersistentVolume : Its used to define whether its a local directory or EBS or Azure
 # HOW do we want it implemented?
 
-apiVersion: v1
-kind: PersistentVolume
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
-  name: local-storage
-spec:
-  storageClassName: mylocalstorage
-  capacity:
-    storage: 20Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /mnt/some/new-directory-structure
-    type: DirectoryOrCreate
+  name: cloud-ssd # This name will be referenced in PVC
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+  fsType: ext4
 
