change memory and cpu in workloads.yaml

--- a/Section-25-k8s-Requests-and-Limits/workloads.yaml
+++ b/Section-25-k8s-Requests-and-Limits/workloads.yaml
@@ -23,6 +23,7 @@ spec:
           resources:
             requests:
               memory: 300Mi # 1Mi = 1024kb; 1M = 1000K
+              cpu: 1
 
 ---
 # Deployment Position Simulator
