--- a/Section-25-k8s-Requests-and-Limits/workloads.yaml
+++ b/Section-25-k8s-Requests-and-Limits/workloads.yaml
@@ -24,6 +24,9 @@ spec:
             requests:
               memory: 300Mi # 1Mi = 1024kb; 1M = 1000K
               cpu: 1
+            limits:
+              memory: 500Mi
+              cpu: 200m
 
 ---
 # Deployment Position Simulator
