--- a/section-26-Metrics-Profiling-in-Kubernetes/workloads.yaml
+++ b/section-26-Metrics-Profiling-in-Kubernetes/workloads.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: queue
-          image: richardchesterwood/k8s-fleetman-queue:release2
+          image: richardchesterwood/k8s-fleetman-queue:resources
           resources:
             requests:
               memory: 300Mi # 1Mi = 1024kb; 1M = 1000K
@@ -49,7 +49,7 @@ spec:
     spec:
       containers:
         - name: position-simulator
-          image: richardchesterwood/k8s-fleetman-position-simulator:release2
+          image: richardchesterwood/k8s-fleetman-position-simulator:resources
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -75,7 +75,7 @@ spec:
     spec:
       containers:
         - name: position-tracker
-          image: richardchesterwood/k8s-fleetman-position-tracker:release3
+          image: richardchesterwood/k8s-fleetman-position-tracker:resources
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -101,7 +101,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: richardchesterwood/k8s-fleetman-api-gateway:release2
+          image: richardchesterwood/k8s-fleetman-api-gateway:resources
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
