--- a/section-26-Metrics-Profiling-in-Kubernetes/workloads.yaml
+++ b/section-26-Metrics-Profiling-in-Kubernetes/workloads.yaml
@@ -23,10 +23,7 @@ spec:
           resources:
             requests:
               memory: 300Mi # 1Mi = 1024kb; 1M = 1000K
-              cpu: 1
-            limits:
-              memory: 500Mi
-              cpu: 200m
+              cpu: 100m
 
 ---
 # Deployment Position Simulator
@@ -50,6 +47,10 @@ spec:
       containers:
         - name: position-simulator
           image: richardchesterwood/k8s-fleetman-position-simulator:resources
+          resources:
+            requests:
+              memory: 200Mi # 1Mi = 1024kb; 1M = 1000K
+              cpu: 50m
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -79,6 +80,10 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 200Mi # 1Mi = 1024kb; 1M = 1000K
+              cpu: 50m
 
 ---
 # Deployment API GATEWAY
@@ -105,6 +110,10 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 200Mi # 1Mi = 1024kb; 1M = 1000K
+              cpu: 50m
 
 ---
 # Deployment WEB APP
@@ -131,4 +140,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 100Mi # 1Mi = 1024kb; 1M = 1000K
+              cpu: 50m
 
