--- a/section-27-Horizontal-Pod-Autoscaling/services.yaml
+++ b/section-27-Horizontal-Pod-Autoscaling/services.yaml
@@ -6,13 +6,14 @@ metadata:
   labels:
     app: webapp
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: webapp
   ports:
     - name: http
       port: 80
       targetPort: 80
+      nodePort: 30080
 
 ---
 # Service QUEUE
