--- a/section-27-Horizontal-Pod-Autoscaling/workloads.yaml
+++ b/section-27-Horizontal-Pod-Autoscaling/workloads.yaml
@@ -106,7 +106,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: richardchesterwood/k8s-fleetman-api-gateway:resources
+          image: richardchesterwood/k8s-fleetman-api-gateway:performance
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -124,7 +124,7 @@ metadata:
   name: webapp
 
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: webapp
