--- a/section-28-Liveness-and-Readyness-Probes/workloads.yaml
+++ b/section-28-Liveness-and-Readyness-Probes/workloads.yaml
@@ -107,6 +107,11 @@ spec:
       containers:
         - name: api-gateway
           image: richardchesterwood/k8s-fleetman-api-gateway:performance
+          readinessProbe:
+            httpGet: # This will send HTTP GET REQUEST to this container
+              path: /
+              port: 8080 # Internal exposed port of the container image
+
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
