Consuming config map as environment variable

--- a/section-30-configmaps-and-secrets/workloads.yaml
+++ b/section-30-configmaps-and-secrets/workloads.yaml
@@ -47,6 +47,18 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
 
+            - name: DATABASE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: global-database-config
+                  key: database.url
+
+            - name: DATABASE_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: global-database-config
+                  key: databasePassword
+
 ---
 # Deployment Position Tracker
 
