Consuming config map as envFrom

--- a/section-30-configmaps-and-secrets/configMap123.yaml
+++ b/section-30-configmaps-and-secrets/configMap123.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: default
 
 data:
-  database.url: "http://dbserver.somewhere.com:3306"
-  databasePassword: "P@ssword123"
+  DATABASE_URL: "http://dbserver.somewhere.com:3306"
+  DATABASE_PASSWORD: "P@ssword123"
