edit TYPE in SERVICES

--- a/section-31-Ingress-Controllers/services.yaml
+++ b/section-31-Ingress-Controllers/services.yaml
@@ -25,7 +25,7 @@ metadata:
   name: fleetman-queue
 
 spec:
-  type: ClusterIP
+  type: NodePort
 
   selector:
     app: queue
@@ -34,6 +34,7 @@ spec:
     - name: http
       port: 8161
       targetPort: 8161
+      nodePort: 30010
 
     - name: endpoint
       port: 61616
