--- a/section-31-Ingress-Controllers/ingress.yaml
+++ b/section-31-Ingress-Controllers/ingress.yaml
@@ -11,6 +11,17 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: fleetman-webapp
+                name: fleet-webapp
                 port: 
                   number: 80
+
+    - host: queue.fleetman.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: fleetman-queue
+                port: 
+                  number: 8161
