apply ingress and secrets

--- a/section-31-Ingress-Controllers/ingress-secret-file.yaml
+++ b/section-31-Ingress-Controllers/ingress-secret-file.yaml
@@ -7,14 +7,15 @@ metadata:
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
 
-  spec:
-    rules:
-      - host: queue.fleetman.com
-        http:
-          paths:
-            path: /
+spec:
+  rules:
+    - host: queue.fleetman.com
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
-              service: 
+              service:
                 name: fleetman-queue
-                port: 80
+                port: 
+                  number: 8161
