--- a/section-31-Ingress-Controllers/ingress-secure.yaml
+++ b/section-31-Ingress-Controllers/ingress-secure.yaml
@@ -1,12 +1,12 @@
 # from v1.14 of k8s
 # apiVersion: networking.k8s.io/v1beta1
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: secure-routing
   annotations:
     nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: mycredentials
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you have a password"
 spec:
   rules:
@@ -14,6 +14,9 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: fleetman-queue
-              servicePort: 8161
+              service:
+                name: fleetman-queue
+                port: 
+                  number: 8161
