--- a/section-31-Ingress-Controllers/ingress.yaml
+++ b/section-31-Ingress-Controllers/ingress.yaml
@@ -2,6 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: basic-routing
+  annotations:
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you have a password"
 spec:
   rules:
     - host: fleetman.com
@@ -15,13 +19,13 @@ spec:
                 port: 
                   number: 80
 
-    # - host: queue.fleetman.com
-    #   http:
-    #     paths:
-    #       - path: /
-    #         pathType: Prefix
-    #         backend:
-    #           service:
-    #             name: fleetman-queue
-    #             port: 
-    #               number: 8161
+    - host: queue.fleetman.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: fleetman-queue
+                port: 
+                  number: 8161
