--- a/section-31-Ingress-Controllers/ingress-public.yaml
+++ b/section-31-Ingress-Controllers/ingress-public.yaml
@@ -1,6 +1,6 @@
 # from v1.14 of k8s
 # apiVersion: networking.k8s.io/v1beta1
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: public-routing
@@ -10,6 +10,9 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: fleetman-webapp
-              servicePort: 80
+              service:
+                name: fleet-webapp
+                port: 
+                  number: 80
